# basic-fastapi

./: .gitignore  pyproject.toml
alembic/: env.py
api/api_v1/: __init__.py  users.py
crud/: users.py
fastapi-application/: .env.template  main.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  base.py  db_helper.py
